WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314259
[Cocoa] Fix `CFNotificationCenter` observer registration leaks in `WebProcessPool`
https://bugs.webkit.org/show_bug.cgi?id=314259
Summary
[Cocoa] Fix `CFNotificationCenter` observer registration leaks in `WebProcess...
Aditya Keerthi
Reported
2026-05-06 16:48:10 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-06 16:48:17 PDT
<
rdar://problem/176407482
>
Aditya Keerthi
Comment 2
2026-05-06 16:52:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64418
EWS
Comment 3
2026-05-07 10:05:54 PDT
Committed
312805@main
(99d8e9334d38): <
https://commits.webkit.org/312805@main
> Reviewed commits have been landed. Closing PR #64418 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug