[Cocoa] Fix `CFNotificationCenter` observer registration leaks in `WebProcessPool` https://bugs.webkit.org/show_bug.cgi?id=314259 rdar://176407482

Reviewed by Richard Robinson and Abrar Rahman Protyasha.

* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::unregisterNotificationObservers):

Unregister observers for `kAXSReduceMotionAutoplayAnimatedImagesChangedNotification`
and `kAXSPrefersNonBlinkingCursorIndicatorDidChangeNotification`.

They are currently registered in `WebProcessPool::registerNotificationObservers()`,
but are never unregistered, resulting in a leak.

Canonical link: https://commits.webkit.org/312805@main